tests/delete/attribute_id_none/test.stderr
error: A struct field must be annotated with `#[crud_id]` to specify the database table
 --> tests/delete/attribute_id_none/test.rs:5:13
  |
5 |   struct Test {
  |  _____________^
6 | |     id: i64,
7 | |     name: String,
8 | | }
  | |_^

error[E0599]: no function or associated item named `delete` found for struct `Test` in the current scope
  --> tests/delete/attribute_id_none/test.rs:15:25
   |
5  | struct Test {
   | ----------- function or associated item `delete` not found for this struct
...
15 |     let _result = Test::delete(&pool, 1).await;
   |                         ^^^^^^ function or associated item not found in `Test`
